- fixed desktop layout - dots not removed after animation (fix overlap issues) - new dot exit animation from Animista - Probably done!

--- a/style.scss
+++ b/style.scss
@@ -14,54 +14,63 @@ $font-bold: 700;
 $font-black: 900;
 
 
-/*following animation from Animista */
-
-.puff-out-center {
-	        animation: puff-out-center .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) both;
-}
-
 /* ----------------------------------------------
- * Generated by Animista on 2019-1-10 10:46:57
+ * Generated by Animista on 2019-1-10 15:33:34
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
 /**
  * ----------------------------------------
- * animation puff-out-center
+ * animation slide-out-blurred-tr
  * ----------------------------------------
  */
- @-webkit-keyframes puff-out-center {
+
+ .slide-out-blurred-tr {
+	-webkit-animation: slide-out-blurred-tr 0.33s cubic-bezier(0.755, 0.050, 0.855, 0.060) both;
+	        animation: slide-out-blurred-tr 0.33s cubic-bezier(0.755, 0.050, 0.855, 0.060) both;
+}
+
+ @-webkit-keyframes slide-out-blurred-tr {
     0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
+      -webkit-transform: translate(0, 0) skew(0deg, 0deg);
+              transform: translate(0, 0) skew(0deg, 0deg);
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-filter: blur(0);
+              filter: blur(0);
       opacity: 1;
     }
     100% {
-      -webkit-transform: scale(2);
-              transform: scale(2);
-      -webkit-filter: blur(2px);
-              filter: blur(2px);
+      -webkit-transform: translate(1000px, -1000px) skew(-80deg, -10deg);
+              transform: translate(1000px, -1000px) skew(-80deg, -10deg);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
+      -webkit-filter: blur(40px);
+              filter: blur(40px);
       opacity: 0;
     }
   }
-  @keyframes puff-out-center {
+  @keyframes slide-out-blurred-tr {
     0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
+      -webkit-transform: translate(0, 0) skew(0deg, 0deg);
+              transform: translate(0, 0) skew(0deg, 0deg);
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-filter: blur(0);
+              filter: blur(0);
       opacity: 1;
     }
     100% {
-      -webkit-transform: scale(2);
-              transform: scale(2);
-      -webkit-filter: blur(2px);
-              filter: blur(2px);
+      -webkit-transform: translate(1000px, -1000px) skew(-80deg, -10deg);
+              transform: translate(1000px, -1000px) skew(-80deg, -10deg);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
+      -webkit-filter: blur(40px);
+              filter: blur(40px);
       opacity: 0;
     }
   }
+
  /* end of Animista animation */
 
 body, html {
@@ -75,7 +84,7 @@ body, html {
     @return map-get($colors, $color-name)
 }
 
-$desktop: 700px;
+$desktop: 900px;
 
 @mixin desktop {
     @media (min-width: #{$desktop}){
@@ -109,7 +118,7 @@ body {
         @include desktop {
             max-width: 100%;
             display: grid;
-            grid-template-columns: 30% auto;
+            grid-template-columns: 33% auto;
             grid-template-areas: 
             "dashboard ball-container"
             "dashboard ball-container"
@@ -141,10 +150,7 @@ body {
             z-index: 3;
             
             @include desktop {
-                grid-template-rows: 56px auto;
-                grid-template-areas: 
-                "left left"
-                "right right";
+                grid-template-columns: 136px auto;
                 clip-path: polygon(0 0, 70% 0, 95% 100%, 0 100%);
             }
             
@@ -154,6 +160,10 @@ body {
                 font-size: 24px;
                 letter-spacing: 1.6px;
                 font-weight: $font-black;
+
+                @include desktop {
+                    /* font-size: 36px; */
+                }
             }
 
             .play-pause-button {
